--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                     <p>Or you can click the links over here!</p><br><br>
                     <p><a href="others/forum/form.html">Forum</a></p><br><br>
                     <p>
-                        <a href="others/project1.html" target="_blank">Project1<br></a>
-                        <a href="others/project2.html" target="_blank">Project2<br></a>
-                        <a href="others/ManzanillaE3-main/index1.html" target="_blank">Project3<br></a>
-                        <a href="others/ManzanillaE3-main/More.html" target="_blank">Project4<br></a>
-                        <a href="others/Ex5_Manzanilla/project5.html" target="_blank">Project5<br></a>
+                        <a href="revised website/others/project1.html" target="_blank">Project1<br></a>
+                        <a href="revised website/others/project2.html" target="_blank">Project2<br></a>
+                        <a href="revised website/others/ManzanillaE3-main/index1.html" target="_blank">Project3<br></a>
+                        <a href="revised website/others/ManzanillaE3-main/More.html" target="_blank">Project4<br></a>
+                        <a href="revised website/others/Ex5_Manzanilla/project5.html" target="_blank">Project5<br></a>
                     </p><br><br>
                 </div>
                 <div id="text-box2">
@@ -51,36 +51,36 @@
                     <p>In the future, I want to be able to make a game that I can be proud of.</p><br><br>
                 </div>
                     <div class="star">
-                        <a href="others/forum/form.html">
+                        <a href="revised website/others/forum/form.html">
                              <img src="images/star.png">
                         </a>
                     </div>
                     <div class="ball1">
-                        <a href="others/project1.html" target="_blank">
+                        <a href="revised website/others/project1.html" target="_blank">
                             <img src="images/ball1.png">
                             <span class="text-box"><p>Project1</p></span>
                         </a>
                     </div>
                     <div class="ball2">
-                        <a href="others/project2.html" target="_blank">
+                        <a href="revised website/others/project2.html" target="_blank">
                             <img src="images/ball2.png">
                             <span class="text-box"><p>Project2</p></span>
                         </a>
                     </div>
                     <div class="ball3">
-                        <a href="others/ManzanillaE3-main/index1.html" target="_blank">
+                        <a href="revised website/others/ManzanillaE3-main/index1.html" target="_blank">
                             <img src="images/ball1.png">
                             <span class="text-box"><p>Project3</p></span>
                         </a>
                     </div>
                     <div class="ball4">
-                        <a href="others/ManzanillaE3-main/More.html" target="_blank">
+                        <a href="revised website/others/ManzanillaE3-main/More.html" target="_blank">
                             <img src="images/ball2.png">
                             <span class="text-box"><p>Project4</p></span>
                         </a>
                     </div>
                     <div class="ball5">
-                        <a href="others/Ex5_Manzanilla/project5.html" target="_blank">
+                        <a href="revised website/others/Ex5_Manzanilla/project5.html" target="_blank">
                         <img src="images/ball1.png">
                         <span class="text-box"><p>Project5</p></span>
                         </a>
