--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>⭐ = A forum so that I can get to know you better.</p><br><br>
                     <p>🔴 = A link for my projects so far.</p><br><br>
                     <p>Or you can click the links over here!</p><br><br>
-                    <p><a href="others/forum/form.html">Forum</a></p><br><br>
+                    <p><a href="revised website/others/forum/form.html">Forum</a></p><br><br>
                     <p>
                         <a href="revised website/others/project1.html" target="_blank">Project1<br></a>
                         <a href="revised website/others/project2.html" target="_blank">Project2<br></a>
